--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,5 +6,7 @@ node {
         checkout scm
 
         sh "ls -al"
+        sh "export ANDROID_HOME=“/opt/android-sdk-linux"
+        sh "echo $path"
     }
 }
