--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,6 +7,6 @@ node {
 
         sh "ls -al"
         sh "pwd"
-        sh "export ANDROID_HOME=“/opt/android-sdk-linux"
+        sh "./gradlew assembleDebug"
     }
 }
