--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,7 +7,7 @@ node {
 
         sh "ls -al"
         sh "pwd"
-        sh "export ANDROID_HOME=/opt/android-sdk-linux
+        sh "export ANDROID_HOME=/opt/android-sdk-linux"
         sh "./gradlew assembledebug"
     }
 }
