--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,6 +8,6 @@ node {
         sh "ls -al"
         sh "pwd"
         sh "export ANDROID_HOME=/opt/android-sdk-linux"
-        sh "./gradlew assembledebug"
+        sh "java -version"
     }
 }
