--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,5 +9,6 @@ node {
         sh "pwd"
         sh "export ANDROID_HOME=/opt/android-sdk-linux"
         sh "java -version"
+        sh "which java"
     }
 }
