--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,5 +11,6 @@ node {
         sh "export JAVA_HOME=/usr/bin/java"
         sh "java -version"
         sh "which java"
+        sh "./gradlew assembleDebug"
     }
 }
