change gradle version

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,5 +11,6 @@ node {
         sh "ls -al /opt/android-sdk-linux"
         sh "export JAVA_HOME=/usr/bin/java"
         sh "java -version"
+        sh "./gradlew clean"
     }
 }
