change gradle version

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ node {
         sh "ls -al"
         sh "pwd"
         sh "export ANDROID_HOME=/opt/android-sdk-linux"
-        sh "ls -al /opt/android-sdk-linux"
+        sh "ls -al /opt/android-sdk-linux/platform-tools"
         sh "export JAVA_HOME=/usr/bin/java"
         sh "java -version"
         sh "./gradlew clean"
