--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    //compileSdkVersion 24
-    //buildToolsVersion "24.0.3"
-    compileSdkVersion 'android-N'
-    buildToolsVersion '24.0.0 rc1'
+    compileSdkVersion 24
+    buildToolsVersion "24.0.3"
+    //compileSdkVersion 'android-N'
+    //buildToolsVersion '24.0.0 rc1'
     defaultConfig {
         applicationId "damar.espresso"
         minSdkVersion 15
-        //targetSdkVersion 24
-        targetSdkVersion 'N'
+        targetSdkVersion 24
+        //targetSdkVersion 'N'
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
