--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,18 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.3"
+    compileSdkVersion 23
+    buildToolsVersion “23.0.1”
+    //compileSdkVersion 24
+    //buildToolsVersion "24.0.3"
     //compileSdkVersion 'android-N'
     //buildToolsVersion '24.0.0 rc1'
     defaultConfig {
         applicationId "damar.espresso"
-        minSdkVersion 15
-        targetSdkVersion 24
+        //minSdkVersion 15
+        minSdkVersion 7
+        targetSdkVersion 23
+        //targetSdkVersion 24
         //targetSdkVersion 'N'
         versionCode 1
         versionName "1.0"
