--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.1.1"
+    buildToolsVersion "23.0.1"
     //compileSdkVersion 24
     //buildToolsVersion "24.0.3"
     //compileSdkVersion 'android-N'
@@ -42,7 +42,8 @@ dependencies {
     //compile 'com.android.support:appcompat-v7:24.2.1'
     //testCompile 'junit:junit:4.12'
 
-    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    //compile 'com.android.support:appcompat-v7:23.1.1'
     // add this for intent mocking support
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
 
