--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,6 +8,7 @@ node {
         sh "ls -al"
         sh "pwd"
         sh "export ANDROID_HOME=/opt/android-sdk-linux"
+        sh "ls -al /opt/android-sdk-linux"
         sh "ls -al /opt/android-sdk-linux/build-tools"
         sh "export JAVA_HOME=/usr/bin/java"
         sh "java -version"
