--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,10 @@ buildscript {
         //classpath 'com.android.tools.build:gradle:2.2.2'
         //classpath 'com.android.tools.build:gradle:2.1.0'
         //classpath 'com.android.tools.build:gradle:x.x.x'
-        classpath 'com.android.tools.build:gradle:2.14.1'
+        //classpath 'com.android.tools.build:gradle:2.14.1'
+        classpath('com.android.tools.build:gradle:2.1.0') {
+            force = true
+        }
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
