--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,9 +15,9 @@ node {
         sh "android list sdk"
         sh "adb version"
         sh "./gradlew -version"
-        sh "./gradlew clean"
+        sh "./gradlew build"
         //sh "keytool -genkey -v -keyalg RSA -keysize 2048 -validity 10000 -dname 'CN=Android Debug,O=Android,C=US' -keystore debug.keystore -storepass android -alias androiddebugkey -keypass android"
-        sh "./gradlew assembleDebug"
+        //sh "./gradlew assembleDebug"
         //sh "gcloud auth activate-service-account modular-glider-366@appspot.gserviceaccount.com --key-file Paktor-0003db16ce61.p12 --project modular-glider-366"
         //sh "./gradlew assembleDebug"
         //sh "echo y | android update sdk --no-ui --filter 4,5,tool,platform-tool,doc"
