--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,17 +7,18 @@ node {
 
         sh "ls -al"
         sh "pwd"
-        sh "mkdir .android"
-        sh "mv debug.keystore .android/"
-        sh "export ANDROID_HOME=/opt/android-sdk-linux"
-        sh "ls -al /opt/android-sdk-linux"
-        sh "ls -al /opt/android-sdk-linux/build-tools"
-        sh "export JAVA_HOME=/usr/bin/java"
-        sh "java -version"
-        sh "android list sdk"
-        sh "adb version"
-        sh "./gradlew -version"
-        sh "./gradlew build"
+        //sh "mkdir .android"
+        //sh "mv debug.keystore .android/"
+        //sh "export ANDROID_HOME=/opt/android-sdk-linux"
+        //sh "ls -al /opt/android-sdk-linux"
+        //sh "ls -al /opt/android-sdk-linux/build-tools"
+        //sh "export JAVA_HOME=/usr/bin/java"
+        //sh "java -version"
+        //sh "android list sdk"
+        //sh "adb version"
+        //sh "./gradlew -version"
+        //sh "./gradlew build"
+
         //sh "keytool -genkey -v -keyalg RSA -keysize 2048 -validity 10000 -dname 'CN=Android Debug,O=Android,C=US' -keystore debug.keystore -storepass android -alias androiddebugkey -keypass android"
         //sh "./gradlew assembleDebug"
         //sh "gcloud auth activate-service-account modular-glider-366@appspot.gserviceaccount.com --key-file Paktor-0003db16ce61.p12 --project modular-glider-366"
