--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,18 +9,18 @@ node {
         sh "pwd"
         sh "ls -al .android/"
         sh "ls -al ?/.android/"
-        sh "mv .android/debug.keystore ?/.android/"
+        //sh "mv .android/debug.keystore ?/.android/"
         //sh "mkdir .android"
         //sh "mv debug.keystore .android/"
-        //sh "export ANDROID_HOME=/opt/android-sdk-linux"
-        //sh "ls -al /opt/android-sdk-linux"
-        //sh "ls -al /opt/android-sdk-linux/build-tools"
-        //sh "export JAVA_HOME=/usr/bin/java"
-        //sh "java -version"
-        //sh "android list sdk"
-        //sh "adb version"
-        //sh "./gradlew -version"
-        //sh "./gradlew build"
+        sh "export ANDROID_HOME=/opt/android-sdk-linux"
+        sh "ls -al /opt/android-sdk-linux"
+        sh "ls -al /opt/android-sdk-linux/build-tools"
+        sh "export JAVA_HOME=/usr/bin/java"
+        sh "java -version"
+        sh "android list sdk"
+        sh "adb version"
+        sh "./gradlew -version"
+        sh "./gradlew build"
 
         //sh "keytool -genkey -v -keyalg RSA -keysize 2048 -validity 10000 -dname 'CN=Android Debug,O=Android,C=US' -keystore debug.keystore -storepass android -alias androiddebugkey -keypass android"
         //sh "./gradlew assembleDebug"
