--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,7 +20,7 @@ node {
         sh "android list sdk"
         sh "adb version"
         sh "./gradlew -version"
-        sh "./gradlew build"
+        sh "./gradlew assembleDebug"
 
         //sh "keytool -genkey -v -keyalg RSA -keysize 2048 -validity 10000 -dname 'CN=Android Debug,O=Android,C=US' -keystore debug.keystore -storepass android -alias androiddebugkey -keypass android"
         //sh "./gradlew assembleDebug"
