--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,7 +10,7 @@ node {
         //sh "keytool -genkey -v -keyalg RSA -keysize 2048 -validity 10000 -dname 'CN=Android Debug,O=Android,C=US' -keystore debug.keystore -storepass android -alias androiddebugkey -keypass android"
         //sh "ls -al"
         //sh "ls -al .android/"
-        //sh "ls -al ?/.android/"
+        ssh "ls -al ?/.android/"
         //sh "mv .android/debug.keystore ?/.android/"
         //sh "mkdir .android"
         //sh "mv debug.keystore .android/"
